STYLE:前年度までのデータはdetailsで折り畳んで表示するようにした

--- a/index.html
+++ b/index.html
@@ -39,109 +39,8 @@ class="toc-section-number">1.1</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
 class="toc-section-number">1.2</span> Pre-season test</a></li>
 </ul></li>
-<li><a href="#season-1" id="toc-season-1"><span
-class="toc-section-number">2</span> 2023 season</a>
-<ul>
-<li><a href="#rd22-abu-dhabi-grand-prix"
-id="toc-rd22-abu-dhabi-grand-prix"><span
-class="toc-section-number">2.1</span> Rd22 Abu Dhabi Grand Prix</a></li>
-<li><a href="#rd21-las-vegas-grand-prix"
-id="toc-rd21-las-vegas-grand-prix"><span
-class="toc-section-number">2.2</span> Rd21 Las Vegas Grand Prix</a></li>
-<li><a href="#rd20-sao-paulo-grand-prix"
-id="toc-rd20-sao-paulo-grand-prix"><span
-class="toc-section-number">2.3</span> Rd20 Sao Paulo Grand Prix</a></li>
-<li><a href="#rd19-mexico-city-grand-prix"
-id="toc-rd19-mexico-city-grand-prix"><span
-class="toc-section-number">2.4</span> Rd19 Mexico City Grand
-Prix</a></li>
-<li><a href="#rd18-united-states-grand-prix"
-id="toc-rd18-united-states-grand-prix"><span
-class="toc-section-number">2.5</span> Rd18 United States Grand
-Prix</a></li>
-<li><a href="#rd17-qatar-grand-prix"
-id="toc-rd17-qatar-grand-prix"><span
-class="toc-section-number">2.6</span> Rd17 Qatar Grand Prix</a></li>
-<li><a href="#rd16-japanese-grand-prix"
-id="toc-rd16-japanese-grand-prix"><span
-class="toc-section-number">2.7</span> Rd16 Japanese Grand Prix</a></li>
-<li><a href="#rd15-singapore-grand-prix"
-id="toc-rd15-singapore-grand-prix"><span
-class="toc-section-number">2.8</span> Rd15 Singapore Grand Prix</a></li>
-<li><a href="#rd14-italian-grand-prix"
-id="toc-rd14-italian-grand-prix"><span
-class="toc-section-number">2.9</span> Rd14 Italian Grand Prix</a></li>
-<li><a href="#rd13-dutch-grand-prix"
-id="toc-rd13-dutch-grand-prix"><span
-class="toc-section-number">2.10</span> Rd13 Dutch Grand Prix</a></li>
-<li><a href="#rd12-belgian-grand-prix"
-id="toc-rd12-belgian-grand-prix"><span
-class="toc-section-number">2.11</span> Rd12 Belgian Grand Prix</a></li>
-<li><a href="#rd11-hungarian-grand-prix"
-id="toc-rd11-hungarian-grand-prix"><span
-class="toc-section-number">2.12</span> Rd11 Hungarian Grand
-Prix</a></li>
-<li><a href="#rd10-british-grand-prix"
-id="toc-rd10-british-grand-prix"><span
-class="toc-section-number">2.13</span> Rd10 British Grand Prix</a></li>
-<li><a href="#rd09-austrian-grand-prix"
-id="toc-rd09-austrian-grand-prix"><span
-class="toc-section-number">2.14</span> Rd09 Austrian Grand Prix</a></li>
-<li><a href="#rd08-canadian-grand-prix"
-id="toc-rd08-canadian-grand-prix"><span
-class="toc-section-number">2.15</span> Rd08 Canadian Grand Prix</a></li>
-<li><a href="#rd07-spanish-grand-prix"
-id="toc-rd07-spanish-grand-prix"><span
-class="toc-section-number">2.16</span> Rd07 Spanish Grand Prix</a></li>
-<li><a href="#rd06-monaco-grand-prix"
-id="toc-rd06-monaco-grand-prix"><span
-class="toc-section-number">2.17</span> Rd06 Monaco Grand Prix</a></li>
-<li><a href="#rd05-miami-grand-prix"
-id="toc-rd05-miami-grand-prix"><span
-class="toc-section-number">2.18</span> Rd05 Miami Grand Prix</a></li>
-<li><a href="#rd04-azerbaijan-grand-prix"
-id="toc-rd04-azerbaijan-grand-prix"><span
-class="toc-section-number">2.19</span> Rd04 Azerbaijan Grand
-Prix</a></li>
-<li><a href="#rd03-australian-grand-prix"
-id="toc-rd03-australian-grand-prix"><span
-class="toc-section-number">2.20</span> Rd03 Australian Grand
-Prix</a></li>
-<li><a href="#rd02-saudi-arabian-grand-prix"
-id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">2.21</span> Rd02 Saudi Arabian Grand
-Prix</a></li>
-<li><a href="#rd01-bahrain-grand-prix-1"
-id="toc-rd01-bahrain-grand-prix-1"><span
-class="toc-section-number">2.22</span> Rd01 Bahrain Grand Prix</a></li>
-<li><a href="#pre-season-test-week1"
-id="toc-pre-season-test-week1"><span
-class="toc-section-number">2.23</span> Pre-Season Test Week1</a></li>
-</ul></li>
-<li><a href="#season-2" id="toc-season-2"><span
-class="toc-section-number">3</span> 2022 season</a>
-<ul>
-<li><a href="#rd22-abu-dhabi-grand-prix-1"
-id="toc-rd22-abu-dhabi-grand-prix-1"><span
-class="toc-section-number">3.1</span> Rd22 Abu Dhabi Grand Prix</a></li>
-<li><a href="#rd21-sao-paulo-grand-prix"
-id="toc-rd21-sao-paulo-grand-prix"><span
-class="toc-section-number">3.2</span> Rd21 Sao Paulo Grand Prix</a></li>
-<li><a href="#rd20-mexico-city-grand-prix"
-id="toc-rd20-mexico-city-grand-prix"><span
-class="toc-section-number">3.3</span> Rd20 Mexico City Grand
-Prix</a></li>
-<li><a href="#rd19-united-states-grand-prix"
-id="toc-rd19-united-states-grand-prix"><span
-class="toc-section-number">3.4</span> Rd19 United States Grand
-Prix</a></li>
-<li><a href="#rd18-japanese-grand-prix"
-id="toc-rd18-japanese-grand-prix"><span
-class="toc-section-number">3.5</span> Rd18 Japanese Grand Prix</a></li>
-<li><a href="#rd17-singapore-grand-prix"
-id="toc-rd17-singapore-grand-prix"><span
-class="toc-section-number">3.6</span> Rd17 Singapore Grand Prix</a></li>
-</ul></li>
+<li><a href="#previous-season" id="toc-previous-season"><span
+class="toc-section-number">2</span> Previous season</a></li>
 </ul>
 </nav>
 <h1 data-number="1" id="season"><span
@@ -203,10 +102,12 @@ PDF</a><br />
 csv</a><br />
 <a href="./2024/2024-Pre-Season-Testing-1-3_rcm.csv">Day2: race contro3
 message csv</a></p>
-<h1 data-number="2" id="season-1"><span
-class="header-section-number">2</span> 2023 season</h1>
-<h2 data-number="2.1" id="rd22-abu-dhabi-grand-prix"><span
-class="header-section-number">2.1</span> Rd22 Abu Dhabi Grand Prix</h2>
+<h1 data-number="2" id="previous-season"><span
+class="header-section-number">2</span> Previous season</h1>
+<details>
+<summary>2023</summary>
+<details>
+<summary>Rd22 Abu Dhabi Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -252,8 +153,9 @@ href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd22-Abu-Dhabi-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.2" id="rd21-las-vegas-grand-prix"><span
-class="header-section-number">2.2</span> Rd21 Las Vegas Grand Prix</h2>
+</details>
+<details>
+<summary>Rd21 Las Vegas Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd21-Las-Vegas-Grand-Prix-Practice-2.pdf">FP2:Plots
 PDF</a><br />
@@ -281,8 +183,9 @@ href="./2023/2023-Rd21-Las-Vegas-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd21-Las-Vegas-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.3" id="rd20-sao-paulo-grand-prix"><span
-class="header-section-number">2.3</span> Rd20 Sao Paulo Grand Prix</h2>
+</details>
+<details>
+<summary>Rd20 Sao Paulo Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -328,9 +231,9 @@ href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd20-Sao-Paulo-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.4" id="rd19-mexico-city-grand-prix"><span
-class="header-section-number">2.4</span> Rd19 Mexico City Grand
-Prix</h2>
+</details>
+<details>
+<summary>Rd19 Mexico City Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -379,9 +282,9 @@ href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd19-Mexico-City-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.5" id="rd18-united-states-grand-prix"><span
-class="header-section-number">2.5</span> Rd18 United States Grand
-Prix</h2>
+</details>
+<details>
+<summary>Rd18 United States Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd18-United-States-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -434,8 +337,9 @@ href="./2023/2023-Rd18-United-States-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd18-United-States-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.6" id="rd17-qatar-grand-prix"><span
-class="header-section-number">2.6</span> Rd17 Qatar Grand Prix</h2>
+</details>
+<details>
+<summary>Rd17 Qatar Grand Prix</summary>
 <p><a href="./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd17-Qatar-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -466,8 +370,9 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd17-Qatar-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="2.7" id="rd16-japanese-grand-prix"><span
-class="header-section-number">2.7</span> Rd16 Japanese Grand Prix</h2>
+</details>
+<details>
+<summary>Rd16 Japanese Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd16-Japanese-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -513,8 +418,9 @@ href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.8" id="rd15-singapore-grand-prix"><span
-class="header-section-number">2.8</span> Rd15 Singapore Grand Prix</h2>
+</details>
+<details>
+<summary>Rd15 Singapore Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -560,8 +466,9 @@ href="./2023/2023-Rd15-Singapore-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd15-Singapore-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.9" id="rd14-italian-grand-prix"><span
-class="header-section-number">2.9</span> Rd14 Italian Grand Prix</h2>
+</details>
+<details>
+<summary>Rd14 Italian Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd14-Italian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -604,8 +511,9 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd14-Italian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.10" id="rd13-dutch-grand-prix"><span
-class="header-section-number">2.10</span> Rd13 Dutch Grand Prix</h2>
+</details>
+<details>
+<summary>Rd13 Dutch Grand Prix</summary>
 <p><a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -642,8 +550,9 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd13-Dutch-Grand-Prix-Race_rcm.csv">R: Race Control
 Message CSV</a></p>
-<h2 data-number="2.11" id="rd12-belgian-grand-prix"><span
-class="header-section-number">2.11</span> Rd12 Belgian Grand Prix</h2>
+</details>
+<details>
+<summary>Rd12 Belgian Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd12-Belgian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -686,8 +595,9 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd12-Belgian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="2.12" id="rd11-hungarian-grand-prix"><span
-class="header-section-number">2.12</span> Rd11 Hungarian Grand Prix</h2>
+</details>
+<details>
+<summary>Rd11 Hungarian Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2.pdf">FP2:Plots
 PDF</a><br />
@@ -724,8 +634,9 @@ href="./2023/2023-Rd11-Hungarian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd11-Hungarian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="2.13" id="rd10-british-grand-prix"><span
-class="header-section-number">2.13</span> Rd10 British Grand Prix</h2>
+</details>
+<details>
+<summary>Rd10 British Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd10-British-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -768,8 +679,9 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd10-British-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="2.14" id="rd09-austrian-grand-prix"><span
-class="header-section-number">2.14</span> Rd09 Austrian Grand Prix</h2>
+</details>
+<details>
+<summary>Rd09 Austrian Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd09-Austrian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -815,8 +727,9 @@ href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="2.15" id="rd08-canadian-grand-prix"><span
-class="header-section-number">2.15</span> Rd08 Canadian Grand Prix</h2>
+</details>
+<details>
+<summary>Rd08 Canadian Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd08-Canadian-Grand-Prix-Practice-1_rcm.csv">FP1:Race
 Control Message CSV</a></p>
@@ -856,8 +769,9 @@ href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="2.16" id="rd07-spanish-grand-prix"><span
-class="header-section-number">2.16</span> Rd07 Spanish Grand Prix</h2>
+</details>
+<details>
+<summary>Rd07 Spanish Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd07-Spanish-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -900,8 +814,9 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd07-Spanish-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="2.17" id="rd06-monaco-grand-prix"><span
-class="header-section-number">2.17</span> Rd06 Monaco Grand Prix</h2>
+</details>
+<details>
+<summary>Rd06 Monaco Grand Prix</summary>
 <p><a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -938,8 +853,9 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd07-Monaco-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="2.18" id="rd05-miami-grand-prix"><span
-class="header-section-number">2.18</span> Rd05 Miami Grand Prix</h2>
+</details>
+<details>
+<summary>Rd05 Miami Grand Prix</summary>
 <p><a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -976,9 +892,9 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd05-Miami-Grand-Prix-Race_rcm.csv">R: Race Control
 Message CSV</a></p>
-<h2 data-number="2.19" id="rd04-azerbaijan-grand-prix"><span
-class="header-section-number">2.19</span> Rd04 Azerbaijan Grand
-Prix</h2>
+</details>
+<details>
+<summary>Rd04 Azerbaijan Grand Prix</summary>
 <p><a
 href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -1018,9 +934,9 @@ href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="2.20" id="rd03-australian-grand-prix"><span
-class="header-section-number">2.20</span> Rd03 Australian Grand
-Prix</h2>
+</details>
+<details>
+<summary>Rd03 Australian Grand Prix</summary>
 <p><a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -1067,9 +983,9 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="2.21" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">2.21</span> Rd02 Saudi Arabian Grand
-Prix</h2>
+</details>
+<details>
+<summary>Rd02 Saudi Arabian Grand Prix</summary>
 <p><a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -1114,8 +1030,9 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="2.22" id="rd01-bahrain-grand-prix-1"><span
-class="header-section-number">2.22</span> Rd01 Bahrain Grand Prix</h2>
+</details>
+<details>
+<summary>Rd01 Bahrain Grand Prix</summary>
 <p><a
 href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -1162,8 +1079,9 @@ Laptime CSV</a></p>
 gaptime PDF</a><br />
 <a href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_gaptime.csv">R:
 gaptime CSV</a></p>
-<h2 data-number="2.23" id="pre-season-test-week1"><span
-class="header-section-number">2.23</span> Pre-Season Test Week1</h2>
+</details>
+<details>
+<summary>Pre-Season Test Week1</summary>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf">Day1
 PDF</a><br />
 <a
@@ -1212,10 +1130,12 @@ vs HAM vs LEC w/ delta</a><br />
 <a
 href="./2023/2023_Rd00_Pre-season-test-Day3-TSU_MAG_ALO_delta.pdf">Day3:TSU
 vs MAG vs ALO w/ delta</a></p>
-<h1 data-number="3" id="season-2"><span
-class="header-section-number">3</span> 2022 season</h1>
-<h2 data-number="3.1" id="rd22-abu-dhabi-grand-prix-1"><span
-class="header-section-number">3.1</span> Rd22 Abu Dhabi Grand Prix</h2>
+</details>
+</details>
+<details>
+<summary>2022</summary>
+<details>
+<summary>Rd22 Abu Dhabi Grand Prix</summary>
 <p><a href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Practice-1.pdf">FP1
 PDF</a><br />
 <a
@@ -1244,8 +1164,9 @@ CSV</a><br />
 <a
 href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Race_race_control_message.csv">RACE:Race
 Control Message CSV</a></p>
-<h2 data-number="3.2" id="rd21-sao-paulo-grand-prix"><span
-class="header-section-number">3.2</span> Rd21 Sao Paulo Grand Prix</h2>
+</details>
+<details>
+<summary>Rd21 Sao Paulo Grand Prix</summary>
 <p><a href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Practice-1.pdf">FP1
 PDF</a><br />
 <a
@@ -1277,9 +1198,9 @@ CSV</a><br />
 <a
 href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Race_race_control_message.csv">RACE:Race
 Control Message CSV</a></p>
-<h2 data-number="3.3" id="rd20-mexico-city-grand-prix"><span
-class="header-section-number">3.3</span> Rd20 Mexico City Grand
-Prix</h2>
+</details>
+<details>
+<summary>Rd20 Mexico City Grand Prix</summary>
 <p><a href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-1.pdf">FP1
 PDF</a><br />
 <a
@@ -1307,9 +1228,9 @@ href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Race_race_control_message.csv">Rac
 Control Message CSV</a><br />
 <a href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Race_gaptime.csv">Race:
 Gap To Leader CSV</a></p>
-<h2 data-number="3.4" id="rd19-united-states-grand-prix"><span
-class="header-section-number">3.4</span> Rd19 United States Grand
-Prix</h2>
+</details>
+<details>
+<summary>Rd19 United States Grand Prix</summary>
 <p><a
 href="./2022/2022_Rd19_United-States-Grand-Prix_Practice-1.pdf">FP1
 PDF</a><br />
@@ -1333,8 +1254,9 @@ CSV</a><br />
 <a
 href="./2022/2022_Rd19_United-States-Grand-Prix_Race_ALO_L22_vs_ALO_L14.pdf">RACE
 ALO L14 vs L22</a></p>
-<h2 data-number="3.5" id="rd18-japanese-grand-prix"><span
-class="header-section-number">3.5</span> Rd18 Japanese Grand Prix</h2>
+</details>
+<details>
+<summary>Rd18 Japanese Grand Prix</summary>
 <p><a href="./2022/2022_Rd18_Japanese-Grand-Prix_Practice-1.pdf">FP1
 PDF</a><br />
 <a href="./2022/2022_Rd18_Japanese-Grand-Prix_Practice-2.pdf">FP2
@@ -1351,13 +1273,16 @@ Control Message CSV</a><br />
 <a
 href="./2022/2022_Rd18_Japanese-Grand-Prix_Race_gaptime.csv">RACE:gaptime
 CSV</a></p>
-<h2 data-number="3.6" id="rd17-singapore-grand-prix"><span
-class="header-section-number">3.6</span> Rd17 Singapore Grand Prix</h2>
+</details>
+<details>
+<summary>Rd17 Singapore Grand Prix</summary>
 <p><a href="./2022/2022_Rd17_Singapore-Grand-Prix_Practice-3.pdf">FP3
 PDF</a><br />
 <a href="./2022/2022_Rd17_Singapore-Grand-Prix_Qualifying.pdf">QF
 PDF</a><br />
 <a href="./2022/2022_Rd17_Singapore-Grand-Prix_Race_sectortime.pdf">RACE
 PDF</a></p>
+</details>
+</details>
 </body>
 </html>
