--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@ laptime csv</a><br />
 <a
 href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Qualifying_rcm.csv">QF:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a
+href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd01-bahrain-grand-prix"><span
 class="header-section-number">1.2</span> Rd01 Bahrain Grand Prix</h2>
 <p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
