--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2024 season</a>
 <ul>
+<li><a href="#rd03-australian-grand-prix"
+id="toc-rd03-australian-grand-prix"><span
+class="toc-section-number">1.1</span> Rd03 Australian Grand
+Prix</a></li>
 <li><a href="#rd02-saudi-arabian-grand-prix"
 id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.1</span> Rd02 Saudi Arabian Grand
+class="toc-section-number">1.2</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd01-bahrain-grand-prix"
 id="toc-rd01-bahrain-grand-prix"><span
-class="toc-section-number">1.2</span> Rd01 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.3</span> Pre-season test</a></li>
+class="toc-section-number">1.4</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#previous-season" id="toc-previous-season"><span
 class="toc-section-number">2</span> Previous season</a></li>
@@ -49,8 +53,17 @@ class="toc-section-number">2</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2024 season</h1>
-<h2 data-number="1.1" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">1.1</span> Rd02 Saudi Arabian Grand
+<h2 data-number="1.1" id="rd03-australian-grand-prix"><span
+class="header-section-number">1.1</span> Rd03 Australian Grand Prix</h2>
+<p><a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd02-saudi-arabian-grand-prix"><span
+class="header-section-number">1.2</span> Rd02 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -98,8 +111,8 @@ href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd01-bahrain-grand-prix"><span
-class="header-section-number">1.2</span> Rd01 Bahrain Grand Prix</h2>
+<h2 data-number="1.3" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.3</span> Rd01 Bahrain Grand Prix</h2>
 <p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -135,8 +148,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="pre-season-test"><span
-class="header-section-number">1.3</span> Pre-season test</h2>
+<h2 data-number="1.4" id="pre-season-test"><span
+class="header-section-number">1.4</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
 PDF</a><br />
 <a href="./2024/2024-Pre-Season-Testing-1-1_laptime.csv">Day1: laptime
