Add 2024 Rd03 Australian GP QF

--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@ href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-3_laptime.csv">FP3:
 laptime csv</a><br />
 <a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-3_rcm.csv">FP3:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd03-Australian-Grand-Prix-Qualifying.pdf">QF:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd03-Australian-Grand-Prix-Qualifying_laptime.csv">QF:
+laptime csv</a><br />
+<a href="./2024/2024-Rd03-Australian-Grand-Prix-Qualifying_rcm.csv">QF:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd02-saudi-arabian-grand-prix"><span
 class="header-section-number">1.2</span> Rd02 Saudi Arabian Grand
 Prix</h2>
