--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@ href="./2024/2024-Rd04-Japanese-Grand-Prix-Practice-3_laptime.csv">FP3:
 laptime csv</a><br />
 <a href="./2024/2024-Rd04-Japanese-Grand-Prix-Practice-3_rcm.csv">FP3:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd04-Japanese-Grand-Prix-Qualifying.pdf">QF:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd04-Japanese-Grand-Prix-Qualifying_laptime.csv">QF:
+laptime csv</a><br />
+<a href="./2024/2024-Rd04-Japanese-Grand-Prix-Qualifying_rcm.csv">QF:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd03-australian-grand-prix"><span
 class="header-section-number">1.2</span> Rd03 Australian Grand Prix</h2>
 <p><a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1.pdf">FP1:
