--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@ href="./2024/2024-Rd04-Japanese-Grand-Prix-Qualifying_laptime.csv">QF:
 laptime csv</a><br />
 <a href="./2024/2024-Rd04-Japanese-Grand-Prix-Qualifying_rcm.csv">QF:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd04-Japanese-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd04-Japanese-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd04-Japanese-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd04-Japanese-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd03-australian-grand-prix"><span
 class="header-section-number">1.2</span> Rd03 Australian Grand Prix</h2>
 <p><a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1.pdf">FP1:
