Add 2024 Rd05 Chinese GP SQ

--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ href="./2024/2024-Rd05-Chinese-Grand-Prix-Practice-1_laptime.csv">FP1:
 laptime csv</a><br />
 <a href="./2024/2024-Rd05-Chinese-Grand-Prix-Practice-1_rcm.csv">FP1:
 race control message csv</a></p>
+<p><a
+href="./2024/2024-Rd05-Chinese-Grand-Prix-Sprint-Qualifying.pdf">SQ:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd05-Chinese-Grand-Prix-Sprint-Qualifying_laptime.csv">SQ:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd05-Chinese-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd04-japanese-grand-prix"><span
 class="header-section-number">1.2</span> Rd04 Japanese Grand Prix</h2>
 <p><a href="./2024/2024-Rd04-Japanese-Grand-Prix-Practice-1.pdf">FP1:
