--- a/index.html
+++ b/index.html
@@ -33,25 +33,28 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2024 season</a>
 <ul>
+<li><a href="#rd06-miami-grand-prix"
+id="toc-rd06-miami-grand-prix"><span
+class="toc-section-number">1.1</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-chinese-grand-prix"
 id="toc-rd05-chinese-grand-prix"><span
-class="toc-section-number">1.1</span> Rd05 Chinese Grand Prix</a></li>
+class="toc-section-number">1.2</span> Rd05 Chinese Grand Prix</a></li>
 <li><a href="#rd04-japanese-grand-prix"
 id="toc-rd04-japanese-grand-prix"><span
-class="toc-section-number">1.2</span> Rd04 Japanese Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd04 Japanese Grand Prix</a></li>
 <li><a href="#rd03-australian-grand-prix"
 id="toc-rd03-australian-grand-prix"><span
-class="toc-section-number">1.3</span> Rd03 Australian Grand
+class="toc-section-number">1.4</span> Rd03 Australian Grand
 Prix</a></li>
 <li><a href="#rd02-saudi-arabian-grand-prix"
 id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.4</span> Rd02 Saudi Arabian Grand
+class="toc-section-number">1.5</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd01-bahrain-grand-prix"
 id="toc-rd01-bahrain-grand-prix"><span
-class="toc-section-number">1.5</span> Rd01 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.6</span> Pre-season test</a></li>
+class="toc-section-number">1.7</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#previous-season" id="toc-previous-season"><span
 class="toc-section-number">2</span> Previous season</a></li>
@@ -59,8 +62,24 @@ class="toc-section-number">2</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2024 season</h1>
-<h2 data-number="1.1" id="rd05-chinese-grand-prix"><span
-class="header-section-number">1.1</span> Rd05 Chinese Grand Prix</h2>
+<h2 data-number="1.1" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.1</span> Rd06 Miami Grand Prix</h2>
+<p><a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
+PDF</a><br />
+<a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1_rcm.csv">FP1: race
+control message csv</a></p>
+<p><a href="./2024/2024-Rd06-Miami-Grand-Prix-Sprint-Qualifying.pdf">SQ:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd06-Miami-Grand-Prix-Sprint-Qualifying_laptime.csv">SQ:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd06-Miami-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd05-chinese-grand-prix"><span
+class="header-section-number">1.2</span> Rd05 Chinese Grand Prix</h2>
 <p><a href="./2024/2024-Rd05-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -100,8 +119,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd05-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd04-japanese-grand-prix"><span
-class="header-section-number">1.2</span> Rd04 Japanese Grand Prix</h2>
+<h2 data-number="1.3" id="rd04-japanese-grand-prix"><span
+class="header-section-number">1.3</span> Rd04 Japanese Grand Prix</h2>
 <p><a href="./2024/2024-Rd04-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -139,8 +158,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd04-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="rd03-australian-grand-prix"><span
-class="header-section-number">1.3</span> Rd03 Australian Grand Prix</h2>
+<h2 data-number="1.4" id="rd03-australian-grand-prix"><span
+class="header-section-number">1.4</span> Rd03 Australian Grand Prix</h2>
 <p><a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -178,8 +197,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd03-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.4" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">1.4</span> Rd02 Saudi Arabian Grand
+<h2 data-number="1.5" id="rd02-saudi-arabian-grand-prix"><span
+class="header-section-number">1.5</span> Rd02 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -227,8 +246,8 @@ href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.5" id="rd01-bahrain-grand-prix"><span
-class="header-section-number">1.5</span> Rd01 Bahrain Grand Prix</h2>
+<h2 data-number="1.6" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.6</span> Rd01 Bahrain Grand Prix</h2>
 <p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -264,8 +283,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="pre-season-test"><span
-class="header-section-number">1.6</span> Pre-season test</h2>
+<h2 data-number="1.7" id="pre-season-test"><span
+class="header-section-number">1.7</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
 PDF</a><br />
 <a href="./2024/2024-Pre-Season-Testing-1-1_laptime.csv">Day1: laptime
