Add 2024 Rd06 Miami GP S + Q

--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@ laptime csv</a><br />
 <a
 href="./2024/2024-Rd06-Miami-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd06-Miami-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a href="./2024/2024-Rd06-Miami-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd06-Miami-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd06-Miami-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
+<p><a href="./2024/2024-Rd06-Miami-Grand-Prix-Qualifying.pdf">Q: Plot
+PDF</a><br />
+<a href="./2024/2024-Rd06-Miami-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2024/2024-Rd06-Miami-Grand-Prix-Qualifying_rcm.csv">Q: race
+control message csv</a></p>
 <h2 data-number="1.2" id="rd05-chinese-grand-prix"><span
 class="header-section-number">1.2</span> Rd05 Chinese Grand Prix</h2>
 <p><a href="./2024/2024-Rd05-Chinese-Grand-Prix-Practice-1.pdf">FP1:
