--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@ laptime csv</a><br />
 <a
 href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-1_rcm.csv">FP1:
 race control message csv</a></p>
+<p><a
+href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-2.pdf">FP2:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd06-miami-grand-prix"><span
 class="header-section-number">1.2</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
