--- a/index.html
+++ b/index.html
@@ -33,35 +33,38 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2024 season</a>
 <ul>
+<li><a href="#rd09-canadian-grand-prix"
+id="toc-rd09-canadian-grand-prix"><span
+class="toc-section-number">1.1</span> Rd09 Canadian Grand Prix</a></li>
 <li><a href="#rd08-monaco-grand-prix"
 id="toc-rd08-monaco-grand-prix"><span
-class="toc-section-number">1.1</span> Rd08 Monaco Grand Prix</a></li>
+class="toc-section-number">1.2</span> Rd08 Monaco Grand Prix</a></li>
 <li><a href="#rd07-emilia-romagna-grand-prix"
 id="toc-rd07-emilia-romagna-grand-prix"><span
-class="toc-section-number">1.2</span> Rd07 Emilia Romagna Grand
+class="toc-section-number">1.3</span> Rd07 Emilia Romagna Grand
 Prix</a></li>
 <li><a href="#rd06-miami-grand-prix"
 id="toc-rd06-miami-grand-prix"><span
-class="toc-section-number">1.3</span> Rd06 Miami Grand Prix</a></li>
+class="toc-section-number">1.4</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-chinese-grand-prix"
 id="toc-rd05-chinese-grand-prix"><span
-class="toc-section-number">1.4</span> Rd05 Chinese Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd05 Chinese Grand Prix</a></li>
 <li><a href="#rd04-japanese-grand-prix"
 id="toc-rd04-japanese-grand-prix"><span
-class="toc-section-number">1.5</span> Rd04 Japanese Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd04 Japanese Grand Prix</a></li>
 <li><a href="#rd03-australian-grand-prix"
 id="toc-rd03-australian-grand-prix"><span
-class="toc-section-number">1.6</span> Rd03 Australian Grand
+class="toc-section-number">1.7</span> Rd03 Australian Grand
 Prix</a></li>
 <li><a href="#rd02-saudi-arabian-grand-prix"
 id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.7</span> Rd02 Saudi Arabian Grand
+class="toc-section-number">1.8</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd01-bahrain-grand-prix"
 id="toc-rd01-bahrain-grand-prix"><span
-class="toc-section-number">1.8</span> Rd01 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.9</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.9</span> Pre-season test</a></li>
+class="toc-section-number">1.10</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#previous-season" id="toc-previous-season"><span
 class="toc-section-number">2</span> Previous season</a></li>
@@ -69,8 +72,24 @@ class="toc-section-number">2</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2024 season</h1>
-<h2 data-number="1.1" id="rd08-monaco-grand-prix"><span
-class="header-section-number">1.1</span> Rd08 Monaco Grand Prix</h2>
+<h2 data-number="1.1" id="rd09-canadian-grand-prix"><span
+class="header-section-number">1.1</span> Rd09 Canadian Grand Prix</h2>
+<p><a href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<p><a href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-2.pdf">FP2:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd08-monaco-grand-prix"><span
+class="header-section-number">1.2</span> Rd08 Monaco Grand Prix</h2>
 <p><a href="./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -103,8 +122,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd08-Monaco-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.2" id="rd07-emilia-romagna-grand-prix"><span
-class="header-section-number">1.2</span> Rd07 Emilia Romagna Grand
+<h2 data-number="1.3" id="rd07-emilia-romagna-grand-prix"><span
+class="header-section-number">1.3</span> Rd07 Emilia Romagna Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf">FP1:
@@ -152,8 +171,8 @@ href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd07-Emilia-Romagna-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.3" id="rd06-miami-grand-prix"><span
-class="header-section-number">1.3</span> Rd06 Miami Grand Prix</h2>
+<h2 data-number="1.4" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.4</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2024/2024-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -190,8 +209,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.4" id="rd05-chinese-grand-prix"><span
-class="header-section-number">1.4</span> Rd05 Chinese Grand Prix</h2>
+<h2 data-number="1.5" id="rd05-chinese-grand-prix"><span
+class="header-section-number">1.5</span> Rd05 Chinese Grand Prix</h2>
 <p><a href="./2024/2024-Rd05-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -231,8 +250,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd05-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.5" id="rd04-japanese-grand-prix"><span
-class="header-section-number">1.5</span> Rd04 Japanese Grand Prix</h2>
+<h2 data-number="1.6" id="rd04-japanese-grand-prix"><span
+class="header-section-number">1.6</span> Rd04 Japanese Grand Prix</h2>
 <p><a href="./2024/2024-Rd04-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -270,8 +289,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd04-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd03-australian-grand-prix"><span
-class="header-section-number">1.6</span> Rd03 Australian Grand Prix</h2>
+<h2 data-number="1.7" id="rd03-australian-grand-prix"><span
+class="header-section-number">1.7</span> Rd03 Australian Grand Prix</h2>
 <p><a href="./2024/2024-Rd03-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -309,8 +328,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd03-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">1.7</span> Rd02 Saudi Arabian Grand
+<h2 data-number="1.8" id="rd02-saudi-arabian-grand-prix"><span
+class="header-section-number">1.8</span> Rd02 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -358,8 +377,8 @@ href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd02-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.8" id="rd01-bahrain-grand-prix"><span
-class="header-section-number">1.8</span> Rd01 Bahrain Grand Prix</h2>
+<h2 data-number="1.9" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.9</span> Rd01 Bahrain Grand Prix</h2>
 <p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -395,8 +414,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.9" id="pre-season-test"><span
-class="header-section-number">1.9</span> Pre-season test</h2>
+<h2 data-number="1.10" id="pre-season-test"><span
+class="header-section-number">1.10</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
 PDF</a><br />
 <a href="./2024/2024-Pre-Season-Testing-1-1_laptime.csv">Day1: laptime
