Add 2024 Rd09 Canadian Race

--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2024/2024-Rd09-Canadian-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd09-Canadian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd09-Canadian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd09-Canadian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd09-Canadian-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd08-monaco-grand-prix"><span
 class="header-section-number">1.2</span> Rd08 Monaco Grand Prix</h2>
 <p><a href="./2024/2024-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
