Add 2024 Rd10 Spanish GP QF

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ race control message csv</a><br />
 <a
 href="./2024/2024-Rd10-Spanish-Grand-Prix-Practice-3_laptime.csv">FP3:
 laptime csv</a></p>
+<p><a href="./2024/2024-Rd10-Spanish-Grand-Prix-Qualifying.pdf">Q: Plot
+PDF</a><br />
+<a href="./2024/2024-Rd10-Spanish-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2024/2024-Rd10-Spanish-Grand-Prix-Qualifying_rcm.csv">Q: race
+control message csv</a></p>
 <h2 data-number="1.2" id="rd09-canadian-grand-prix"><span
 class="header-section-number">1.2</span> Rd09 Canadian Grand Prix</h2>
 <p><a href="./2024/2024-Rd09-Canadian-Grand-Prix-Practice-1.pdf">FP1:
