--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@ laptime csv</a><br />
 <a
 href="./2024/2024-Rd11-Austrian-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd11-Austrian-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd11-Austrian-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd11-Austrian-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd11-Austrian-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd10-spanish-grand-prix"><span
 class="header-section-number">1.2</span> Rd10 Spanish Grand Prix</h2>
 <p><a href="./2024/2024-Rd10-Spanish-Grand-Prix-Practice-1.pdf">FP1:
