--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2024/2024-Rd11-Austrian-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd11-Austrian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd11-Austrian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd11-Austrian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd11-Austrian-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd10-spanish-grand-prix"><span
 class="header-section-number">1.2</span> Rd10 Spanish Grand Prix</h2>
 <p><a href="./2024/2024-Rd10-Spanish-Grand-Prix-Practice-1.pdf">FP1:
