Add 2024 Rd12 British GP QF

--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@ href="./2024/2024-Rd12-British-Grand-Prix-Practice-3_laptime.csv">FP3:
 laptime csv</a><br />
 <a href="./2024/2024-Rd12-British-Grand-Prix-Practice-3_rcm.csv">FP3:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd12-British-Grand-Prix-Qualifying.pdf">Q: Plot
+PDF</a><br />
+<a href="./2024/2024-Rd12-British-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2024/2024-Rd12-British-Grand-Prix-Qualifying_rcm.csv">Q: race
+control message csv</a></p>
 <h2 data-number="1.2" id="rd11-austrian-grand-prix"><span
 class="header-section-number">1.2</span> Rd11 Austrian Grand Prix</h2>
 <p><a href="./2024/2024-Rd11-Austrian-Grand-Prix-Practice-1.pdf">FP1:
