--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1_rcm.csv">FP1: race
 control message csv</a></p>
+<p><a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-2.pdf">FP2: Plot
+PDF</a><br />
+<a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-2_rcm.csv">FP2: race
+control message csv</a></p>
 <h2 data-number="1.2" id="rd14-belgian-grand-prix"><span
 class="header-section-number">1.2</span> Rd14 Belgian Grand Prix</h2>
 <p><a href="./2024/2024-Rd14-Belgian-Grand-Prix-Practice-1.pdf">FP1:
