--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@ href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-2_laptime.csv">FP2:
 laptime csv</a><br />
 <a href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-2_rcm.csv">FP2:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-3.pdf">FP3:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-3_laptime.csv">FP3:
+laptime csv</a><br />
+<a href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-3_rcm.csv">FP3:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd15-dutch-grand-prix"><span
 class="header-section-number">1.2</span> Rd15 Dutch Grand Prix</h2>
 <p><a href="./2024/2024-Rd15-Dutch-Grand-Prix-Practice-1.pdf">FP1: Plot
