Add 2024 Rd17 Azerbaijan GP FP2

--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@ laptime csv</a><br />
 <a
 href="./2024//2024-Rd17-Azerbaijan-Grand-Prix-Practice-1_rcm.csv">FP1:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd17-Azerbaijan-Grand-Prix-Practice-2.pdf">FP2:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd17-Azerbaijan-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a href="./2024/2024-Rd17-Azerbaijan-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd16-italian-grand-prix"><span
 class="header-section-number">1.2</span> Rd16 Italian Grand Prix</h2>
 <p><a href="./2024/2024-Rd16-Italian-Grand-Prix-Practice-1.pdf">FP1:
