Add 2024 Rd20 Mexico City GP R

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@ href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Qualifying_laptime.csv">Q:
 laptime csv</a><br />
 <a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd19-united-state-grand-prix"><span
 class="header-section-number">1.2</span> Rd19 United State Grand
 Prix</h2>
