Add 2024 Rd21 Sao Paulo GP SQ

--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@ href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Practice-1_laptime.csv">FP1:
 laptime csv</a><br />
 <a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Practice-1_rcm.csv">FP1:
 race control message csv</a></p>
+<p><a
+href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint-Qualifying.pdf">SQ:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint-Qualifying_laptime.csv">SQ:
+laptime csv</a><br />
+<a
+href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd20-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd20 Mexico City Grand
 Prix</h2>
