Add 2024 Rd21 Sao Paulo GP S

--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@ laptime csv</a><br />
 <a
 href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd20-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd20 Mexico City Grand
 Prix</h2>
