Add 2024 Rd21 Sao Paulo GP R

--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_rcm.csv">S:Race
 Control Message CSV</a></p>
+<p><a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd20-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd20 Mexico City Grand
 Prix</h2>
