Add 2024 Rd21 Sao Paulo GP Q

--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Sprint_rcm.csv">S:Race
 Control Message CSV</a></p>
+<p><a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Qualifying.pdf">Q:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Qualifying_rcm.csv">Q:
+race control message csv</a></p>
 <p><a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Race.pdf">R:Plots
 PDF</a><br />
 <a
